# B.A.S.E.

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
base-check/src/: compare.rs  report.rs
base-cli/: Cargo.toml
base-cli/src/: cli.rs  commands.rs  disasm.rs
base-core/: Cargo.toml
base-core/component_db/: stm32f103c8.yaml
base-core/src/: event_graph.rs  graphviz.rs  honesty.rs  lib.rs  paleo.rs  phylo.rs  strat_align.rs  tension.rs
base-core/tests/: pilot_stm32.rs  pilot_stm32_goldens.rs  pilot_stm32_i2c.rs  pilot_stm32_spi.rs  pilot_stm32_spi_goldens.rs  pilot_stm32_tim.rs  pilot_validate.rs
base-hil/: Cargo.toml  README.md
base-hil/src/: agent.rs  flash.rs  lab_gate.rs  lib.rs  probe.rs  programmer.rs  usb.rs
base-learn/: Cargo.toml
base-learn/src/: classifier.rs  dataset.rs  lib.rs
base-pcb/src/: bom.rs  pcb_layout.rs  schematic.rs
base-port/: Cargo.toml
base-port/src/: clocks_pinctrl.rs  fossils.rs  lib.rs  map.rs  package.rs  platform.rs  (+3 more)
base-recomp/: Cargo.toml
base-recomp/src/: emit.rs  honesty.rs  lib.rs  lift.rs  roundtrip.rs  sir.rs  target.rs
base-recomp/tests/: r2_x86_64.rs  r3_arm_family.rs  r4_classic_risc.rs  r5_superh.rs
base-recomp/tests/goldens/: aarch64_add3.s  aarch64_nop_ret.s  arm_add3.s  arm_nop_ret.s  mips_add3.s  mips_nop_ret.s  ppc_add3.s  ppc_nop_ret.s  sh_add3.s  sh_nop_ret.s  sparc_add3.s  sparc_nop_ret.s  x86_64_add3.s  x86_64_nop_ret.s
base-vault/: 00 - Index.md  08 - Glossary.md
base-virt/: Cargo.toml
docs/: README.md  STATIC_RECOMP.md
(+255 files in other folders)
