[package]
name = "base-hil"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. HIL Cluster — hardware probe firmware + host agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }
base-check = { path = "../base-check" }

[dev-dependencies]
tempfile = "3"

[lib]
name = "base_hil"
path = "src/lib.rs"
