[package]
name = "base-learn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B.A.S.E. Foundation Models — ML models for HW inference"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base-core = { path = "../base-core" }

[lib]
name = "base_learn"
path = "src/lib.rs"
